fixed text align on mobile layout

--- a/src/components/Layout/mobile-layout.module.css
+++ b/src/components/Layout/mobile-layout.module.css
@@ -24,6 +24,7 @@
 
 .brand {
     padding: .5rem;
+    margin: 0;
 
     font-size: 1.5rem;
     font-weight: 800;
